# triton-shared

./: .gitignore  CMakeLists.txt  README.md  triton-hash.txt  triton_shared.cc
.github/workflows/: clang-format.yml  integration-tests.yml  test-plugin.yml
backend/: compiler.py  driver.py
include/triton-shared/Conversion/: CMakeLists.txt
include/triton-shared/Conversion/LinalgToVector/: LinalgToVector.h  Passes.h  Passes.td
include/triton-shared/Conversion/TritonArithToLinalg/: ConversionPatterns.hpp
include/triton-shared/Conversion/TritonTensorDescriptorToMemref/: CMakeLists.txt  Passes.h  Passes.td  TritonTensorDescriptorToMemref.h
include/triton-shared/Conversion/TritonTensorDescriptorToStructured/: CMakeLists.txt  Passes.h  Passes.td  TritonTensorDescriptorToStructured.h
lib/Analysis/: MaskAnalysis.cpp
lib/AnalysisStructured/: PtrAnalysis.cpp
lib/Conversion/: CMakeLists.txt
lib/Conversion/LinalgToVector/: LinalgToVector.cpp  LinalgToVectorPass.cpp
lib/Conversion/StructuredToMemref/: StructuredToMemref.cpp  StructuredToMemrefPass.cpp
lib/Conversion/TPtrToLLVM/: TPtrToLLVM.cpp
lib/Conversion/TritonArithToLinalg/: TritonArithToLinalg.cpp  TritonArithToLinalgPass.cpp
lib/Conversion/TritonPtrToMemref/: TritonPtrToMemrefPass.cpp
lib/Conversion/TritonPtrToPtr/: TritonPtrToPtrPass.cpp
lib/Conversion/TritonTensorDescriptorToMemref/: CMakeLists.txt  TritonTensorDescriptorToMemrefPass.cpp
lib/Conversion/TritonToLinalgExperimental/: CMakeLists.txt  (+4 more)
python/examples/: conftest.py  test_softmax.py  test_unstructured_mask.py
tools/triton-shared-opt/: CMakeLists.txt  RegisterTritonSharedDialects.h  triton-shared-lsp.cpp
(+119 files in other folders)
